; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_chassis-limits.c_chassis_fdlimit_get.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_chassis-limits.c_chassis_fdlimit_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit = type { i32 }

@RLIMIT_NOFILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chassis_fdlimit_get() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.rlimit, align 4
  %3 = load i32, i32* @RLIMIT_NOFILE, align 4
  %4 = call i32 @getrlimit(i32 %3, %struct.rlimit* %2)
  %5 = icmp eq i32 -1, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %10

7:                                                ; preds = %0
  %8 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %2, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %7, %6
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @getrlimit(i32, %struct.rlimit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
